[package]
name = "opensea-stream"
description = "Client for receiving updates from the OpenSea Stream API over websockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wanderers-nft/opensea-stream-rs"
categories = ["web-programming::websocket", "cryptography::cryptocurrencies"]
keywords = ["opensea", "stream", "nft"]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
ethers-core = "0.17.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

phyllo = "0.3.0"
tokio = { version = "1.18.2", features = ["sync"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.58"
tokio = { version = "1.18.2", features = ["full"] }

[features]
default = ["rustls-tls-native-roots"]
rustls-tls-native-roots = ["phyllo/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["phyllo/rustls-tls-webpki-roots"]
